# turboquant

./: .gitignore  README.md  pyproject.toml  run_all.py
benchmarks/: bench_bias.py  bench_distortion.py  bench_recall.py  bench_recall_synthetic.py  bench_timing.py
turboquant/: __init__.py  bounds.py  pq_baseline.py  quantizer.py
