[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "turboquant"
version = "0.1.0"
description = "Python implementation of TurboQuant (arXiv:2504.19874)"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "matplotlib>=3.8",
    "tabulate>=0.9",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["turboquant*", "benchmarks*"]
